# Storage-Engine

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: architecture_diagram.md  requirements_spec.md
proto/: replication.proto
src/: error_handler.cpp  error_handler.h  main.cpp  thread_pool.cpp  thread_pool.h
src/cache/: distributed_cache.cpp  distributed_cache.h  memory_allocator.cpp  memory_allocator.h
src/monitoring/: io_monitor.cpp  io_monitor.h  iomonitor.bpf.c  rest_server.cpp  rest_server.h
src/replication/: replication_protocol.cpp  replication_protocol.h
src/storage/: storage_engine.cpp  storage_engine.h
tests/: CMakeLists.txt  benchmark_storage.cpp  integration_test.cpp  test_memory_allocator.cpp
